Done second task

--- a/lab2/pg_hba.conf
+++ b/lab2/pg_hba.conf
@@ -114,9 +114,10 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   all             all                                    peer map=mymap
+local all all peer map=mymap
+local replication postgres1 peer
 # IPv4 local connections:
-host    all             all           all 	md5 
+host all all all md5 
 # IPv6 local connections:
 # Allow replication connections from localhost, by a user with the
 # replication privilege.
