--- a/lab2/pg_ident.conf
+++ b/lab2/pg_ident.conf
@@ -71,4 +71,8 @@
 mymap	postgres1 sterus
 mymap	postgres1 postgres1
 mymap	postgres1 postgres3
+
+mymap	postgres3 sterus
+mymap	postgres3 postgres1
+mymap	postgres3 postgres3
 # MAPNAME       SYSTEM-USERNAME         PG-USERNAME
